compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_segment_type_does_not_allow_variable_string.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<>> { <<a:utf8>> -> 1 _ -> 2 }"
---
----- SOURCE CODE
case <<>> { <<a:utf8>> -> 1 _ -> 2 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:15
  │
1 │ case <<>> { <<a:utf8>> -> 1 _ -> 2 }
  │               ^^^^^^ This cannot be a variable

Hint: in patterns utf8, utf16, and utf32  must be an exact string.
See: https://tour.gleam.run/data-types/bit-arrays/
